		 when multiple delegates respond to the same ResolveUnregisteredType event. Publication of the 
		 property allows users skip and continue when another delegate already registered that type.
		-[Extensions] Performance optimization in the RegisterOpenGeneric extension method. Types can now 
		 be resolved as quickly as types that are registered using a Func<T> delegate.
	
	Bug Fixes:
		-[Core] Container.GetAllInstances<T> and Container.GetAllInstances(Type) did not trigger unregistered 
		 type resolution. (work item 16419).
		-[Extensions] The RegisterManyForOpenGeneric and RegisterManySinglesForOpenGeneric extension methods 
		 that take an IEnumerable<Assembly> or Assembly[] failed when a Anonymously Hosted DynamicMethods 
		 Assembly was supplied, which would typically happen when the method was called with 
		 'AppDomain.CurrentDomain.GetAssemblies()'.
		-[Extensions] The methods RegisterOpenGeneric and RegisterSingleOpenGeneric extension methods did not 
		 take generic type constraints and generic type reordering into consideration. (work item 16053).
		-[Extensions] Due to a race condition, it was possible for the RegisterSingleOpenGeneric method to 
		 new up more instances of the same type.


Version 1.1.0.11142 (v1.1 RTM) 2011-05-22
	General description:
		This release fixes a small bug and adds a small feature to the core that allows the retrieval of
		IInstanceProvider types. The SimpleInjector.Extensions.dll builds upon this feature to improve 
		performance of the registrations made using the RegisterAll extension method. The extensions project
		also adds new RegisterManyForOpenGeneric that allow many more advanced scenario's.
	
	Code Changes:
		-RegisterSingle(Container, Type) method removed from NonGenericRegistrationsExtensions class in 
		 SimpleInjector.Extensions. Because of the C# overload resolution rules, the C# compiler never picked 
		 that method, but would always pick Container.RegisterSingle<Type>(Type), which would not yield the 