@@ -23,6 +23,11 @@ Version vNext
 		 be resolved as quickly as types that are registered using a Func<T> delegate.
 	
 	Bug Fixes:
+		-[Core] The TransientInstanceProducer<T> and FuncSingletonInstanceProducer<T> incorrectly called 
+		 "lock (this)". This behavior was correct in v1.0 were those types were not publicly exposed, but 
+		 since the IInstanceProducer interface has gone public in v1.1 this is now incorrect. We could now 
+		 face deadlocks when users decide to take a lock (for what strange reason what so ever) on these 
+		 instances.
 		-[Core] Container.GetAllInstances<T> and Container.GetAllInstances(Type) did not trigger unregistered 
 		 type resolution. (work item 16419).
 		-[Extensions] The RegisterManyForOpenGeneric and RegisterManySinglesForOpenGeneric extension methods 
